# HiCalendar

./: .gitignore  CMakeLists.txt  HiCalendar.pro  LICENSE  README.md  assetsmanager.cpp  assetsmanager.h  crossplatform_assets.pri  dbmanager.cpp  dbmanager.h  main.cpp  main.qml  qml.qrc
Docs/: En.md  Fa.md
cmake/: compiler_options.cmake  proconfig.cmake
hi/: HiCalendarFullDayItemView.qml  HiCalendarGeorgianHeader.qml  HiCalendarJalaliHeader.qml  HiCalendarMinDayItemView.qml  HiCalendarView.qml  hicalendar.cpp  hicalendar.h
include/: assetsmanager.hpp  common.hpp  config.hpp  config.hpp.in  dbmanager.hpp
include/hi/: hicalendar.hpp
src/: assetsmanager.cpp  dbmanager.cpp  main.cpp
src/hi/: hicalendar.cpp
ui/: FontSystem.qml  Footer.qml  Header.qml  HiCalendarView.qml  main.qml
ui/Component/: Button.qml  CircleButton.qml  HorizontalLine.qml  HorizontalSpacer.qml  MiniButton.qml  RadioCheck.qml  TextView.qml  VerticalLine.qml  VerticalSpacer.qml
ui/View/: FullItemView.qml  MinDayView.qml
ui/View/Component/: CircleButton.qml  FontSystem.qml  Footer.qml  Header.qml  HorizontalLine.qml  RadioCheck.qml  TextView.qml  VerticalLine.qml  VerticalSpacer.qml
ui/View/hi/: FullItemView.qml  HiCalendarView.qml  MinDayView.qml
